# ml-institute-week-6-fine-tuning

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  setup.py  setup.sh
notebooks/: haiku_dpo_exploratory_analysis.ipynb
src/: config.py
src/haikufy/: 01_get_data.py  01_get_data_v2.py  01_get_data_v3.py  01_get_data_v4.py  01_get_data_v5.py  app.py  get_data_v5.py  gpt2_haikufy.py  gpt2_haikufy_lora.py  gpt2_haikufy_lora_csv.py  gpt2_haikufy_lora_csv_haiku_dpo.py  gpt2_haikufy_lora_csv_statworx_haiku.py  gpt2xl_haikufy_lora_csv.py  gruen.py  haikufy.py  haikufy_lora.py  haikufy_lora_csv.py
src/spectogrammify/: dataset.py  spectrogrammify.py
