[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "In this week's project, we will build a multimodal Transformer model which generates captions for images."
authors = [
  { name = "Andrea Della Corte" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.12"
dependencies = [
    "datasets>=3.6.0",
    "transformers>=4.51.3",
    "torch>=2.0.0",
    "peft>=0.15.2",
    "trl>=0.17.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


